tests/jsx_intrinsics.custom/jsx_intrinsics.custom.exp
Error: main.js:8
  8: var b: React$Node<{|prop1: string|}> = <CustomComponent prop="asdf" />; // Error: Props<{prop}> ~> Props<{prop1}>
                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element `CustomComponent`
  8: var b: React$Node<{|prop1: string|}> = <CustomComponent prop="asdf" />; // Error: Props<{prop}> ~> Props<{prop1}>
                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React$Element. This type is incompatible with
  8: var b: React$Node<{|prop1: string|}> = <CustomComponent prop="asdf" />; // Error: Props<{prop}> ~> Props<{prop1}>
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ union: type application of class `React$Element` | string | number | type application of identifier `Iterable`
  Member 1:
   13:   | React$Element<Config>
           ^^^^^^^^^^^^^^^^^^^^^ type application of class `React$Element`. See lib: <BUILTINS>/react.js:13
  Error:
    8: var b: React$Node<{|prop1: string|}> = <CustomComponent prop="asdf" />; // Error: Props<{prop}> ~> Props<{prop1}>
                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `prop`. Property not found in
    8: var b: React$Node<{|prop1: string|}> = <CustomComponent prop="asdf" />; // Error: Props<{prop}> ~> Props<{prop1}>
                         ^^^^^^^^^^^^^^^^^ object type
  Member 2:
   14:   | string
           ^^^^^^ string. See lib: <BUILTINS>/react.js:14
  Error:
    8: var b: React$Node<{|prop1: string|}> = <CustomComponent prop="asdf" />; // Error: Props<{prop}> ~> Props<{prop1}>
                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React$Element. This type is incompatible with
   14:   | string
           ^^^^^^ string. See lib: <BUILTINS>/react.js:14
  Member 3:
   15:   | number
           ^^^^^^ number. See lib: <BUILTINS>/react.js:15
  Error:
    8: var b: React$Node<{|prop1: string|}> = <CustomComponent prop="asdf" />; // Error: Props<{prop}> ~> Props<{prop1}>
                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React$Element. This type is incompatible with
   15:   | number
           ^^^^^^ number. See lib: <BUILTINS>/react.js:15
  Member 4:
   16:   | Iterable<React$Node<Config>>;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type application of identifier `Iterable`. See lib: <BUILTINS>/react.js:16
  Error:
   16:   | Iterable<React$Node<Config>>;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `@@iterator` of $Iterable. Property not found in. See lib: <BUILTINS>/react.js:16
    8: var b: React$Node<{|prop1: string|}> = <CustomComponent prop="asdf" />; // Error: Props<{prop}> ~> Props<{prop1}>
                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React$Element

Error: main.js:11
 11: <div id={42} />; // Error: (`id` prop) number ~> string
     ^^^^^^^^^^^^^^^ props of React element `div`. This type is incompatible with
  5:   div: $JSXIntrinsic<{id: string}>,
                          ^^^^^^^^^^^^ object type. See lib: lib/jsx.js:5
  Property `id` is incompatible:
     11: <div id={42} />; // Error: (`id` prop) number ~> string
                  ^^ number. This type is incompatible with
      5:   div: $JSXIntrinsic<{id: string}>,
                                   ^^^^^^ string. See lib: lib/jsx.js:5

Error: main.js:13
 13: var d: React$Node<{|id: number|}> = <div id="asdf" />; // Error: Props<{id:string}> ~> Props<{id:number}>
                                         ^^^^^^^^^^^^^^^^^ React element `div`
 13: var d: React$Node<{|id: number|}> = <div id="asdf" />; // Error: Props<{id:string}> ~> Props<{id:number}>
                                         ^^^^^^^^^^^^^^^^^ React$Element. This type is incompatible with
 13: var d: React$Node<{|id: number|}> = <div id="asdf" />; // Error: Props<{id:string}> ~> Props<{id:number}>
            ^^^^^^^^^^^^^^^^^^^^^^^^^^ union: type application of class `React$Element` | string | number | type application of identifier `Iterable`
  Member 1:
   13:   | React$Element<Config>
           ^^^^^^^^^^^^^^^^^^^^^ type application of class `React$Element`. See lib: <BUILTINS>/react.js:13
  Error:
   13: var d: React$Node<{|id: number|}> = <div id="asdf" />; // Error: Props<{id:string}> ~> Props<{id:number}>
                                           ^^^^^^^^^^^^^^^^^ props of React element `div`. This type is incompatible with
   13: var d: React$Node<{|id: number|}> = <div id="asdf" />; // Error: Props<{id:string}> ~> Props<{id:number}>
                         ^^^^^^^^^^^^^^ object type
    Property `id` is incompatible:
       13: var d: React$Node<{|id: number|}> = <div id="asdf" />; // Error: Props<{id:string}> ~> Props<{id:number}>
                                                       ^^^^^^ string. This type is incompatible with
       13: var d: React$Node<{|id: number|}> = <div id="asdf" />; // Error: Props<{id:string}> ~> Props<{id:number}>
                                   ^^^^^^ number
  Member 2:
   14:   | string
           ^^^^^^ string. See lib: <BUILTINS>/react.js:14
  Error:
   13: var d: React$Node<{|id: number|}> = <div id="asdf" />; // Error: Props<{id:string}> ~> Props<{id:number}>
                                           ^^^^^^^^^^^^^^^^^ React$Element. This type is incompatible with
   14:   | string
           ^^^^^^ string. See lib: <BUILTINS>/react.js:14
  Member 3:
   15:   | number
           ^^^^^^ number. See lib: <BUILTINS>/react.js:15
  Error:
   13: var d: React$Node<{|id: number|}> = <div id="asdf" />; // Error: Props<{id:string}> ~> Props<{id:number}>
                                           ^^^^^^^^^^^^^^^^^ React$Element. This type is incompatible with
   15:   | number
           ^^^^^^ number. See lib: <BUILTINS>/react.js:15
  Member 4:
   16:   | Iterable<React$Node<Config>>;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type application of identifier `Iterable`. See lib: <BUILTINS>/react.js:16
  Error:
   16:   | Iterable<React$Node<Config>>;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `@@iterator` of $Iterable. Property not found in. See lib: <BUILTINS>/react.js:16
   13: var d: React$Node<{|id: number|}> = <div id="asdf" />; // Error: Props<{id:string}> ~> Props<{id:number}>
                                           ^^^^^^^^^^^^^^^^^ React$Element

Error: strings.js:10
 10: <Bad />; // Error: 'bad' not in JSXIntrinsics
     ^^^^^^^ React element `Bad`
  6: var Bad = 'bad';
               ^^^^^ property `bad`. Property not found in
 10: <Bad />; // Error: 'bad' not in JSXIntrinsics
     ^^^^^^^ object type

Error: strings.js:11
 11: <Str />; // Error: string ~> keys of JSXIntrinsics
     ^^^^^^^ React element `Str`
  7: var Str: string = 'str';
              ^^^^^^ some string with unknown value. Property not found in
 11: <Str />; // Error: string ~> keys of JSXIntrinsics
     ^^^^^^^ object type

Error: strings.js:14
 14: React.createElement('bad', {}); // Error: 'bad' not in JSXIntrinsics
                         ^^^^^ property `bad`. Property not found in
 14: React.createElement('bad', {}); // Error: 'bad' not in JSXIntrinsics
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type

Error: strings.js:15
 15: React.createElement(Str, {}); // Error: string ~> keys of JSXIntrinsics
                         ^^^ some string with unknown value. Property not found in
 15: React.createElement(Str, {}); // Error: string ~> keys of JSXIntrinsics
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type


Found 7 errors
